adds function to populate forecasted weather data

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,7 +54,7 @@ h2{
   width: 100%;
 }
 .card-5-day{
-  background-color: rgb(23, 35, 65);
+  background-color: lightgray;
   min-width: 17%;
   height: 10em;
   
