--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,18 +7,24 @@
 
 body{
   font-family: Arial, Helvetica, sans-serif;
+  font-weight: 200 !important;
   background-color: var(--mdgray) !important;
   color: rgb(62, 131, 215) !important;
 }
 
+button{
+  border-radius: 9px;
+  border: none;
+  padding: .2em;
+}
 header{
   background-color:rgb(8, 9, 12);
   font-size: 1em;
-  margin-bottom: 1em;
+  margin-bottom: 2em;
 }
 
 h1{
-  font-size: 2.5em !important;
+  font-size: 2.2em !important;
   font-weight: bold;
   padding: 10px 0 5px 0;
 }
@@ -35,10 +41,16 @@ input{
   color: gainsboro;
 }
 
+span{
+  color: gainsboro;
+  font-weight: 400;
+}
+
 
 #search-city {
   display: inline-block;
 }
+
 #search-city input{
   width: 100%;
   margin: 1em 0 1em 0;
@@ -50,11 +62,14 @@ input{
   background-color: rgb(0, 81, 255);
   color: gainsboro;
   width: 100%;
-  border-radius: 9px;
-  border: none;
-  padding: .2em;
 }
 
+#search-history button{
+  background-color: var(--dkgray);
+  color: gainsboro;
+  width: 100%;
+  margin-bottom: 1em;
+}
 #current-weather{
   background-color: var(--dkgray);
   width: 100%;
